# HW2

./: Dockerfile  app.py  diagram.drawio  main.py  pyproject.toml
